// Food ordering service protobuf
syntax = "proto3";

package napoli;

import "models.proto";

message GetOrdersRequest {}
message GetOrdersReply {
    repeated Order orders = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message CreateOrderRequest {
    string menu_url = 1; // Max length: 210 characters
}
message SingleOrderReply {
    Order order = 1;
}

message AddOrderEntryRequest {
    int32 order_id = 1;
    string food = 2; // Max length: 210 characters
    string buyer = 3; // Max length: 210 characters
    // Deprecated: do not use
    double price_deprecated = 4;
    int64 price_in_millicents = 7;
}

message OrderEntryRequest {
    int32 order_id = 1;
    int32 order_entry_id = 2;
}

message UpdateOrderStateRequest {
    int32 order_id = 1;
    OrderState state = 2;
}

message SetOrderEntryPaidRequest {
    int32 order_id = 1;
    int32 order_entry_id = 2;
    bool paid = 3;
}

// Define a service to return a sample order
service OrderService {
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersReply);
    rpc CreateOrder (CreateOrderRequest) returns (SingleOrderReply);
    rpc GetOrder (GetOrderRequest) returns (SingleOrderReply);
    rpc UpdateOrderState (UpdateOrderStateRequest) returns (SingleOrderReply);

    // Manage OrderEntries
    rpc AddOrderEntry (AddOrderEntryRequest) returns (SingleOrderReply);
    rpc RemoveOrderEntry (OrderEntryRequest) returns (SingleOrderReply);
    rpc SetOrderEntryPaid (SetOrderEntryPaidRequest) returns (SingleOrderReply);

    // Live Updates
    rpc StreamOrderUpdates (GetOrderRequest) returns (stream SingleOrderReply);
}
